# h730duino-firmware

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  Makefile  README.md  STM32H730ZBTx_FLASH.ld  start-tio.sh  tinyusb.mk  tst-h730.ioc
Core/Inc/: main.h  memplace.h  performance_measure.h  stm32h7xx_hal_conf.h  tusb_config.h
Core/Src/: main.c  startup.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  system_stm32h7xx.c  usb_descriptors.c
Drivers/BSP/Components/lan8742/: lan8742.c
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32H7xx_HAL_Driver/: CMakeLists.txt
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_exti.c  stm32h7xx_hal_flash.c  stm32h7xx_hal_pwr.c
FATFS/App/: fatfs.h
LWIP/App/: lwip.c
app/: app.c  app.cpp  app.h  app_utils.c  cmd_eth.c  cmd_utils.c  exec.c  exec.h  hardfault.c  module.mk  printf_retarget.c  qspi_ffi.c  qspi_ffi.h  sched.c  sched.h  sched_impl.c  sdcmd.c  utils.c  utils.h  version.c  version.h
cmake/: toolchain-arm_none_eabi.cmake  utils.cmake
hisahi-scanf/: module.mk  scanf.c
microrl/: config.h  microrl.c  microrl.h  module.mk
mpaland-printf/: printf.h  printf.mk
segger-rtt/: CMakeLists.txt  module.mk
tinyusb/: CMakeLists.txt  module.mk
tinyusb/src/common/: tusb_common.h
tools/: dfu.py  reset_config.cfg
